--- a/_in_progress/Moai Statues/data/moai_statues/worldgen/structure_set/snow.json
+++ b/_in_progress/Moai Statues/data/moai_statues/worldgen/structure_set/snow.json
@@ -1,7 +1,7 @@
 {
   "structures": [
     {
-      "structure": "moai_statues:moai",
+      "structure": "moai_statues:snow",
       "weight": 1
     }
   ],
