--- a/1.21.5-1.21.10/Fishing Expansion/data/minecraft/loot_table/gameplay/fishing/treasure.json
+++ b/1.21.5-1.21.10/Fishing Expansion/data/minecraft/loot_table/gameplay/fishing/treasure.json
@@ -10,6 +10,11 @@
           "value": "fishing_expansion:fishing/loot/turtle"
         },
         {
+          "weight": 1,
+          "type": "minecraft:loot_table",
+          "value": "fishing_expansion:heart_of_the_elder_drowned"
+        },
+        {
           "weight": 5,
           "type": "minecraft:loot_table",
           "value": "fishing_expansion:fishing/loot/fish"
